@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.669 2005-05-08 20:37:27 castaglia Exp $
+$Id: NEWS,v 1.670 2005-05-10 16:35:36 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -25,6 +25,7 @@ CVS
 - Bug 2605 - Compiler warnings/errors about missing typecasts on HP-UX.
 - Bug 2589 - Makefile in modules/ directory is not portable.
 - Bug 2598 - Build system should check for duplicate module requests.
+- Bug 2585 - Proftpd does not write RFC 3164 compliant messages into /dev/log.
 
 1.3.0rc1 - Released 10-Apr-2005
 --------------------------------
